# page-analyzer

./: Makefile  README.md  database.sql  init_db.py  pyproject.toml  setup.cfg  user_data1.json
.github/workflows/: github_action.yaml
page_analyzer/: app.py  db_interaction.py  parser.py  validate.py  validate_funk.py
page_analyzer/postgresql_analyzer/: db_interaction.py  url_checks.py  urls.py
page_analyzer/templates/: base_template.html  index.html  page_not_found.html  website_info.html  websites_list.html
page_analyzer/templates/main/: index.html  page_not_found.html  website_info.html  websites_list.html
