[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["KsyushaKI <oksanaakadem39@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.1"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
